# mind-flayer

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  biome.json  commitlint.config.ts  components.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-it.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.claude/commands/: atomic-commit.md
.github/: AI_DOC_UPDATE_PROMPTS.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
scripts/: build-sidecar.sh  check-i18n.ts  cleanup-port.sh  sync-release-version.ts
sidecar/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sidecar/scripts/: build-sidecar.mjs  mind-flayer-sidecar  rename-binaries.sh
sidecar/src/: index-old.ts  index.ts  server.ts  (+1 more)
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: .gitignore  AppIcon.icns  Cargo.toml  tauri.conf.json
src-tauri/bundled-skills/coding-agent-skills/claude-code/: SKILL.md
src-tauri/bundled-skills/coding-agent-skills/codex/: SKILL.md
src-tauri/bundled-skills/create-plan/: SKILL.md
src-tauri/bundled-skills/frontend-design/: SKILL.md
src-tauri/bundled-skills/skill-smoke-test/: SKILL.md
src-tauri/bundled-workspace/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md
src-tauri/capabilities/: default.json  sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_support.rs  keychain.rs  lib.rs  main.rs  setup.rs  shortcuts.rs
src-tauri/src/setup/: sidecar.rs
(+262 files in other folders)
